Fixed display on mobile devices (fix #11)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,8 +86,8 @@ rect {
 }
 
 @media screen and (max-width: 768px) {
-  .header-search {
-    width: 200px;
+  .header .header-search {
+    width: auto;
   }
 }
 
